[tool.poetry]
name = "ml-tf-pt-jx"
version = "0.1.0"
description = ""
authors = ["Mobasshir Bhuiya <mobasshirbhuiyan.shagor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
tensorflow-metal = "^1.1.0"
tensorflow-macos = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
